@@ -1,3 +1,8 @@
+2021-06-15  Frank Ch. Eigler <fche@redhat.com>
+
+	* run-debuginfod-find.sh (err): Elaborate.  Use as the reliable
+	error-report triggering function, rather than "exit 1".
+
 2021-06-03  Frank Ch. Eigler <fche@redhat.com>
 
 	PR27863
